# Web_hw_5

./: README.md  data.json  main.py  pyproject.toml
Web_chat/: CustomLogger.py  server.py
