[tool.poetry]
name = "web-hw-5"
version = "0.1.0"
description = "Exchange Rates"
authors = ["Vlad <vlad111121562@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"
names = "^0.3.0"
aiopath = "^0.7.7"
aiofile = "^3.8.8"
aiohttp = "^3.9.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
